Make the default mode of findsn (conflicting programs in $PATH) less noisy, by including more commonly alias binaries in the list to exclude
git-svn-id: https://fslint.googlecode.com/svn/trunk@147 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -23,6 +23,8 @@
 		  group all selected packages together for easier review.
 		* Indicate using the mouse pointer that the application is busy,
 		  during the possibly long cleaning/deleting/merging processes.
+		* Exclude more commonly aliased binaries when searching
+		  for conflicting program names in the $PATH.
 
 2.24 19/09/07
 	* Translations:
