--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+fslint (2.27-1) unstable; urgency=low
+
+  * Bump to devel version
+
+ -- Pádraig Brady <P@draigBrady.com>  Thu, 20 May 2008 10:47:00 +0000
+
 fslint (2.26-1) unstable; urgency=low
 
   * Bump to release version
