Update NEWS for commits 154 & 157
git-svn-id: https://fslint.googlecode.com/svn/trunk@158 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,4 +1,9 @@
 2.27 dd/mm/yy
+	* Translations:
+		* Updated: Turkish.
+	* Fixes:
+		* Better handle paths with unusual characters when
+		  searching for suspect symbolic links.
 
 2.26 20/05/08
 	* Translations:
