--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,12 @@ fslint (2.27-1) unstable; urgency=low
 
  -- Pádraig Brady <P@draigBrady.com>  Tue, 20 May 2008 10:47:00 +0000
 
+fslint (2.26-2) unstable; urgency=low
+
+  * Minor packaging cleanups suggested by Cameron Dale
+
+ -- Pádraig Brady <P@draigBrady.com>  Thu, 22 May 2008 15:17:00 +0000
+
 fslint (2.26-1) unstable; urgency=low
 
   * Bump to release version
@@ -29,6 +35,12 @@ fslint (2.23-1) unstable; urgency=low
   * Bump to devel version
 
  -- Pádraig Brady <P@draigBrady.com>  Thu, 28 Jun 2007 16:38:00 +0000
+
+fslint (2.22-2) unstable; urgency=low
+
+  * Minor packaging cleanups suggested by Bart Martens
+
+ -- Pádraig Brady <P@draigBrady.com>  Mon, 02 Jul 2007 07:50:00 +0000
 
 fslint (2.22-1) unstable; urgency=low
 
