--- a/doc/NEWS
+++ b/doc/NEWS
@@ -4,6 +4,8 @@
 	* Fixes:
 		* Better handle paths with unusual characters when
 		  searching for suspect symbolic links.
+		* Work around a python bug triggered when the disk
+		  wastage of a group of duplicate files is > 2GB.
 
 2.26 20/05/08
 	* Translations:
