Fixup a quoting issue which stopped trailing tabs from being stripped from end of lines in the tool for cleaning redundant whitespace.
git-svn-id: https://fslint.googlecode.com/svn/trunk@163 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -6,6 +6,7 @@
 		  searching for suspect symbolic links.
 		* Work around a python bug triggered when the disk
 		  wastage of a group of duplicate files is > 2GB.
+		* Fix "fix whitespace" script to remove trailing tabs.
 
 2.26 20/05/08
 	* Translations:
