--- a/doc/NEWS
+++ b/doc/NEWS
@@ -7,6 +7,7 @@
 		* Work around a python bug triggered when the disk
 		  wastage of a group of duplicate files is > 2GB.
 		* Fix "fix whitespace" script to remove trailing tabs.
+		* Tweak some ancillary scripts to run on dash (ubuntu).
 
 2.26 20/05/08
 	* Translations:
