--- a/doc/NEWS
+++ b/doc/NEWS
@@ -8,6 +8,8 @@
 		  wastage of a group of duplicate files is > 2GB.
 		* Fix "fix whitespace" script to remove trailing tabs.
 		* Tweak some ancillary scripts to run on dash (ubuntu).
+	* Improvements:
+		* Improve layout of "redundant whitespace" tab options.
 
 2.26 20/05/08
 	* Translations:
