Sync a few translations from launchpad for French, German, Spanish, Malay. Also since it's 2008 change French, German, Malay, Irish and Portuguese from ISO-8859 to UTF-8.
git-svn-id: https://fslint.googlecode.com/svn/trunk@166 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,6 +1,6 @@
 2.27 dd/mm/yy
 	* Translations:
-		* Updated: Turkish.
+		* Updated: Turkish, French, German, Spanish, Malay.
 	* Fixes:
 		* Better handle paths with unusual characters when
 		  searching for suspect symbolic links.
