--- a/po/de.po
+++ b/po/de.po
@@ -1,5 +1,5 @@
 # German translations for FSlint package.
-# Copyright (C) 2003 Pádraig Brady
+# Copyright (C) 2003 PÃ¡draig Brady
 # This file is distributed under the same license as the FSlint package.
 # Michael Armbrecht <marmbrecht@eircom.net>, 2003.
 #
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-01 16:07+0000\n"
-"PO-Revision-Date: 2008-01-01 21:30+0000\n"
-"Last-Translator: Vinzenz Vietzke <Unknown>\n"
+"PO-Revision-Date: 2008-05-29 10:24+0000\n"
+"Last-Translator: DT <a0015194@unet.univie.ac.at>\n"
 "Language-Team: Michael Armbrecht <marmbrecht@eircom.net>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-15\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2008-05-15 10:20+0000\n"
+"X-Launchpad-Export-Date: 2008-07-11 11:00+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
@@ -27,11 +27,11 @@ msgstr "_Umbenennen..."
 
 #: ../fslint.glade:101
 msgid "Select using wildcard"
-msgstr "Auswählen mittels Platzhalter"
+msgstr "AuswÃ¤hlen mittels Platzhalter"
 
 #: ../fslint.glade:110
 msgid "Unselect using wildcard"
-msgstr "Abwählen mittels Platzhalter"
+msgstr "AbwÃ¤hlen mittels Platzhalter"
 
 #: ../fslint.glade:119
 msgid "within groups"
@@ -39,15 +39,15 @@ msgstr "In Gruppen"
 
 #: ../fslint.glade:128
 msgid "Select all but first"
-msgstr "Alle außer den ersten Eintrag"
+msgstr "Alle auÃŸer den ersten Eintrag"
 
 #: ../fslint.glade:137
 msgid "Select all but newest"
-msgstr "Wähle alle, bis auf Neueste"
+msgstr "WÃ¤hle alle, bis auf Neueste"
 
 #: ../fslint.glade:146
 msgid "Select all but oldest"
-msgstr "Wähle alle, bis auf Älteste"
+msgstr "WÃ¤hle alle, bis auf Ã„lteste"
 
 #: ../fslint.glade:159
 msgid "Toggle selection"
@@ -55,11 +55,11 @@ msgstr "Auswahl umkehren"
 
 #: ../fslint.glade:168
 msgid "Unselect all"
-msgstr "Keinen auswählen"
+msgstr "Keinen auswÃ¤hlen"
 
 #: ../fslint.glade:285 ../fslint.glade:538
 msgid "Add"
-msgstr "Hinzufügen"
+msgstr "HinzufÃ¼gen"
 
 #: ../fslint.glade:361 ../fslint.glade:614
 msgid "Remove"
@@ -79,15 +79,15 @@ msgstr "Suchpfad"
 
 #: ../fslint.glade:669
 msgid "Paths to exclude"
-msgstr "Auszuschließende Pfade"
+msgstr "AuszuschlieÃŸende Pfade"
 
 #: ../fslint.glade:704
 msgid "Extra find parameters"
-msgstr "Zusätzliche Suchparameter"
+msgstr "ZusÃ¤tzliche Suchparameter"
 
 #: ../fslint.glade:729
 msgid "extra find filtering parameters"
-msgstr "Zusätzliche Filterparameter"
+msgstr "ZusÃ¤tzliche Filterparameter"
 
 #: ../fslint.glade:762
 msgid "Advanced search parameters"
@@ -118,7 +118,7 @@ msgstr "Duplikate"
 #: ../fslint.glade:997 ../fslint.glade:1596 ../fslint.glade:1808
 #: ../fslint.glade:2221 ../fslint.glade:2488 ../fslint.glade:2713
 msgid "Size"
-msgstr "Größe"
+msgstr "GrÃ¶ÃŸe"
 
 #: ../fslint.glade:1111
 msgid "Installed packages"
@@ -130,11 +130,11 @@ msgstr "Empfindlichkeit="
 
 #: ../fslint.glade:1196
 msgid "invalid UTF8 mode?"
-msgstr "Ungültige UTF8-Zeichen?"
+msgstr "UngÃ¼ltige UTF8-Zeichen?"
 
 #: ../fslint.glade:1303
 msgid "Bad names"
-msgstr "Ungültige Namen"
+msgstr "UngÃ¼ltige Namen"
 
 #: ../fslint.glade:1338
 msgid "Search ("
@@ -159,7 +159,7 @@ msgstr "Aliase"
 
 #: ../fslint.glade:1477 ../fslint-gui:912
 msgid "Case conflicts"
-msgstr "Konflikte durch Groß-/Kleinschreibung"
+msgstr "Konflikte durch GroÃŸ-/Kleinschreibung"
 
 #: ../fslint.glade:1485 ../fslint-gui:908
 msgid "Same names"
@@ -167,7 +167,7 @@ msgstr "gleichen Namen"
 
 #: ../fslint.glade:1493 ../fslint-gui:910
 msgid "Same names(ignore case)"
-msgstr "gleichen Namen (ungeachtet Groß-/Kleinschreibung)"
+msgstr "gleichen Namen (ungeachtet GroÃŸ-/Kleinschreibung)"
 
 #: ../fslint.glade:1631
 msgid "Name clashes"
@@ -191,7 +191,7 @@ msgstr "Mindestalter"
 
 #: ../fslint.glade:1862
 msgid "Temp files"
-msgstr "Temporäre Dateien"
+msgstr "TemporÃ¤re Dateien"
 
 #: ../fslint.glade:1898
 msgid "Dangling"
@@ -205,7 +205,7 @@ msgstr ""
 
 #: ../fslint.glade:1918
 msgid "Suspect"
-msgstr "Verdächtig"
+msgstr "VerdÃ¤chtig"
 
 #: ../fslint.glade:1938
 msgid "Relative"
@@ -261,11 +261,11 @@ msgstr "Leerzeichen am Ende der Zeile"
 
 #: ../fslint.glade:2603
 msgid "bad indenting for indent width"
-msgstr "Fehlerhafte Einrückung für Einrückungsweite"
+msgstr "Fehlerhafte EinrÃ¼ckung fÃ¼r EinrÃ¼ckungsweite"
 
 #: ../fslint.glade:2767
 msgid "Redundant whitespace"
-msgstr "Überflüssige Leerzeichen"
+msgstr "ÃœberflÃ¼ssige Leerzeichen"
 
 #: ../fslint.glade:2853
 msgid "Find"
@@ -281,7 +281,7 @@ msgstr "Auswahl treffen"
 
 #: ../fslint.glade:3047
 msgid "Save (selected) list to file"
-msgstr "Ausgewählte Einträge als Liste speichern"
+msgstr "AusgewÃ¤hlte EintrÃ¤ge als Liste speichern"
 
 #: ../fslint.glade:3092
 msgid "Save"
@@ -289,11 +289,11 @@ msgstr "Speichern"
 
 #: ../fslint.glade:3123 ../fslint.glade:3275
 msgid "selected"
-msgstr "Ausgewählte Einträge"
+msgstr "AusgewÃ¤hlte EintrÃ¤ge"
 
 #: ../fslint.glade:3168
 msgid "Delete"
-msgstr "Löschen"
+msgstr "LÃ¶schen"
 
 #: ../fslint.glade:3199
 msgid ""
@@ -301,7 +301,7 @@ msgid ""
 "(or symlinks if on a different filesystem)"
 msgstr ""
 "Die anderen Dateien verweisen mit Hardlinks\n"
-"auf die ausgewählten Dateien\n"
+"auf die ausgewÃ¤hlten Dateien\n"
 "(bzw. Symlinks auf ein anderes Dateisystem)"
 
 #: ../fslint.glade:3245
@@ -310,15 +310,15 @@ msgstr "Zusammenlegen"
 
 #: ../fslint.glade:3320
 msgid "Clean"
-msgstr "Säubern"
+msgstr "SÃ¤ubern"
 
 #: ../fslint.glade:3452
 msgid "Select Path"
-msgstr "Pfad auswählen"
+msgstr "Pfad auswÃ¤hlen"
 
 #: ../fslint.glade:3603
 msgid "ask me this in future?"
-msgstr ""
+msgstr "zukÃ¼nftig nachfragen ?"
 
 #: ../fslint-gui:167
 #, python-format
@@ -340,11 +340,11 @@ msgstr "%(percent)s von %(disk)s belegt, %(size)sB sind noch frei"
 
 #: ../fslint-gui:507
 msgid "Do you want to overwrite?\n"
-msgstr "Möchten Sie überschreiben?\n"
+msgstr "MÃ¶chten Sie Ã¼berschreiben?\n"
 
 #: ../fslint-gui:513
 msgid "You can't overwrite "
-msgstr "Sie können nicht überschreiben "
+msgstr "Sie kÃ¶nnen nicht Ã¼berschreiben "
 
 #: ../fslint-gui:548
 msgid "Files with the same content"
@@ -360,11 +360,11 @@ msgstr "Problematische Dateinamen"
 
 #: ../fslint-gui:551
 msgid "Possibly conflicting commands or filenames"
-msgstr "Möglicherweise in Konflikt stehende Kommandos oder Dateinamen"
+msgstr "MÃ¶glicherweise in Konflikt stehende Kommandos oder Dateinamen"
 
 #: ../fslint-gui:552
 msgid "Possibly old temporary files"
-msgstr "Wahrscheinliche alte temporäre Dateien"
+msgstr "Wahrscheinliche alte temporÃ¤re Dateien"
 
 #: ../fslint-gui:553
 msgid "Problematic symbolic links"
@@ -376,7 +376,7 @@ msgstr "Dateien ohne User ID"
 
 #: ../fslint-gui:556
 msgid "Executables still containing debugging info"
-msgstr "Ausführbare Dateien, die noch Debug-Informationen beinhalten"
+msgstr "AusfÃ¼hrbare Dateien, die noch Debug-Informationen beinhalten"
 
 #: ../fslint-gui:557
 msgid "Erroneous whitespace in a text file"
@@ -384,7 +384,7 @@ msgstr "Fehlerhafte Leerzeichen in einer Text-Datei"
 
 #: ../fslint-gui:563
 msgid "Invalid path ["
-msgstr "Unzulässiger Pfad ["
+msgstr "UnzulÃ¤ssiger Pfad ["
 
 #: ../fslint-gui:604
 msgid "searching"
@@ -402,7 +402,7 @@ msgstr "Kein Verzeichnis zum Durchsuchen"
 msgid ""
 "Sorry, FSlint does not support this functionality on your system at present."
 msgstr ""
-"FSlint unterstützt diese Funktion derzeit leider nicht auf Ihrem System."
+"FSlint unterstÃ¼tzt diese Funktion derzeit leider nicht auf Ihrem System."
 
 #: ../fslint-gui:792
 msgid " packages, "
@@ -424,7 +424,7 @@ msgstr " Dateien"
 
 #: ../fslint-gui:833
 msgid " unstripped binaries"
-msgstr " Binärdateien mit Debug-Informationen"
+msgstr " BinÃ¤rdateien mit Debug-Informationen"
 
 #: ../fslint-gui:842
 msgid " empty directories"
@@ -452,7 +452,7 @@ msgstr "Bytes verschwendet"
 
 #: ../fslint-gui:1081
 msgid "None selected"
-msgstr "Keine ausgewählt"
+msgstr "Keine ausgewÃ¤hlt"
 
 #: ../fslint-gui:1085
 msgid " this item?\n"
@@ -480,7 +480,7 @@ msgstr "Fehler: [%s] kann auf ihrem Dateisystem nicht dargestellt werden"
 #, python-format
 msgid "Error: Can't rename [%(old_path)s] as [%(new_path)s] exists"
 msgstr ""
-"Fehler: Umbennung von [%(old_path)s] nicht zulässig; [%(new_path)s] "
+"Fehler: Umbennung von [%(old_path)s] nicht zulÃ¤ssig; [%(new_path)s] "
 "existiert bereits"
 
 #: ../fslint-gui:1378
@@ -489,44 +489,44 @@ msgstr "Platzhalter:"
 
 #: ../fslint-gui:1551
 msgid "Sorry, you must be root to delete system packages."
-msgstr "Sie benötigen leider Root-Rechte, um System-Pakete zu löschen."
+msgstr "Sie benÃ¶tigen leider Root-Rechte, um System-Pakete zu lÃ¶schen."
 
 #: ../fslint-gui:1556
 msgid "Are you sure you want to delete"
-msgstr "Sind sie sicher, dass sie diese löschen möchten"
+msgstr "Sind sie sicher, dass sie diese lÃ¶schen mÃ¶chten"
 
 #: ../fslint-gui:1573
 msgid "Calculating dependencies..."
-msgstr "Berechne Abhängigkeiten..."
+msgstr "Berechne AbhÃ¤ngigkeiten..."
 
 #: ../fslint-gui:1591
 #, python-format
 msgid "%d extra packages need to be deleted.\n"
-msgstr "%d weitere Pakete müssen gelöscht werden.\n"
+msgstr "%d weitere Pakete mÃ¼ssen gelÃ¶scht werden.\n"
 
 #: ../fslint-gui:1592
 msgid "Please review the updated selection."
-msgstr "Bitte prüfen Sie die aktualisierte Auswahl."
+msgstr "Bitte prÃ¼fen Sie die aktualisierte Auswahl."
 
 #: ../fslint-gui:1600
 msgid "Removing packages..."
-msgstr "Lösche Pakete..."
+msgstr "LÃ¶sche Pakete..."
 
 #: ../fslint-gui:1632
 msgid " items deleted"
-msgstr " Dateien gelöscht"
+msgstr " Dateien gelÃ¶scht"
 
 #: ../fslint-gui:1645
 msgid "Are you sure you want to merge ALL files?\n"
-msgstr "Sind Sie sicher, dass sie ALLE Dateien zusammenlegen möchten?\n"
+msgstr "Sind Sie sicher, dass sie ALLE Dateien zusammenlegen mÃ¶chten?\n"
 
 #: ../fslint-gui:1649
 msgid "(Ignoring those selected)\n"
-msgstr "(Ignoriere die ausgewählten)\n"
+msgstr "(Ignoriere die ausgewÃ¤hlten)\n"
 
 #: ../fslint-gui:1697
 msgid "Which indenting method do you want to convert to?"
-msgstr "Welche Einrückungsart möchten Sie verwenden?"
+msgstr "Welche EinrÃ¼ckungsart mÃ¶chten Sie verwenden?"
 
 #: ../fslint-gui:1698
 msgid "Tabs"
@@ -538,11 +538,11 @@ msgstr "Leerzeichen"
 
 #: ../fslint-gui:1709
 msgid "Are you sure you want to clean"
-msgstr "Sind Sie sicher, dass sie diese aufräumen möchten"
+msgstr "Sind Sie sicher, dass sie diese aufrÃ¤umen mÃ¶chten"
 
 #: ../fslint-gui:1753
 msgid " items cleaned ("
-msgstr " Objekte aufgeräumt ("
+msgstr " Objekte aufgerÃ¤umt ("
 
 #: ../fslint-gui:1754
 msgid " bytes saved)"
