--- a/po/ga.po
+++ b/po/ga.po
@@ -1,5 +1,5 @@
 # Irish translations for FSlint package.
-# Copyright (C) 2003 Pádraig Brady
+# Copyright (C) 2003 PÃ¡draig Brady
 # This file is distributed under the same license as the FSlint package.
 # Patrick Kiernan <patrickk@campus.ie>, 2003.
 #
@@ -12,7 +12,7 @@ msgstr ""
 "Last-Translator: Patrick Kiernan <patrickk@campus.ie>\n"
 "Language-Team: Gaeilge <ga@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-15\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../fslint.glade:8
@@ -33,7 +33,7 @@ msgstr ""
 
 #: ../fslint.glade:119
 msgid "within groups"
-msgstr "grúpaí"
+msgstr "grÃºpaÃ­"
 
 #: ../fslint.glade:128
 msgid "Select all but first"
@@ -71,7 +71,7 @@ msgstr "Comhadlann Cuardacha"
 
 #: ../fslint.glade:433
 msgid "recurse?"
-msgstr "Athchúrsach"
+msgstr "AthchÃºrsach"
 
 #: ../fslint.glade:457
 msgid "Search path"
@@ -79,19 +79,19 @@ msgstr "Conair Cuardaigh"
 
 #: ../fslint.glade:669
 msgid "Paths to exclude"
-msgstr "Conair le fágail as"
+msgstr "Conair le fÃ¡gail as"
 
 #: ../fslint.glade:704
 msgid "Extra find parameters"
-msgstr "Paraiméadar cuardach breise"
+msgstr "ParaimÃ©adar cuardach breise"
 
 #: ../fslint.glade:729
 msgid "extra find filtering parameters"
-msgstr "Paraiméadar scagaire cuardacha breise"
+msgstr "ParaimÃ©adar scagaire cuardacha breise"
 
 #: ../fslint.glade:762
 msgid "Advanced search parameters"
-msgstr "Paraiméadar cuardach ar aghaidh"
+msgstr "ParaimÃ©adar cuardach ar aghaidh"
 
 #: ../fslint.glade:847 ../fslint.glade:978 ../fslint.glade:1249
 #: ../fslint.glade:1558 ../fslint.glade:1770 ../fslint.glade:2024
@@ -109,11 +109,11 @@ msgstr "Comhadlann"
 #: ../fslint.glade:885 ../fslint.glade:1827 ../fslint.glade:2240
 #: ../fslint.glade:2355 ../fslint.glade:2507 ../fslint.glade:2732
 msgid "Date"
-msgstr "Dáta"
+msgstr "DÃ¡ta"
 
 #: ../fslint.glade:920
 msgid "Duplicates"
-msgstr "Dúbailí"
+msgstr "DÃºbailÃ­"
 
 #: ../fslint.glade:997 ../fslint.glade:1596 ../fslint.glade:1808
 #: ../fslint.glade:2221 ../fslint.glade:2488 ../fslint.glade:2713
@@ -126,7 +126,7 @@ msgstr ""
 
 #: ../fslint.glade:1152
 msgid "Sensitivity="
-msgstr "Íogairechta="
+msgstr "Ãogairechta="
 
 #: ../fslint.glade:1196
 msgid "invalid UTF8 mode?"
@@ -150,7 +150,7 @@ msgstr ") le haghaidh"
 
 #: ../fslint.glade:1430 ../fslint-gui:899
 msgid "Conflicting files"
-msgstr "Comhadí coimhlint"
+msgstr "ComhadÃ­ coimhlint"
 
 #: ../fslint.glade:1438 ../fslint.glade:1501 ../fslint-gui:897
 #: ../fslint-gui:906
@@ -159,27 +159,27 @@ msgstr ""
 
 #: ../fslint.glade:1477 ../fslint-gui:912
 msgid "Case conflicts"
-msgstr "Coimhlintí cás"
+msgstr "CoimhlintÃ­ cÃ¡s"
 
 #: ../fslint.glade:1485 ../fslint-gui:908
 msgid "Same names"
-msgstr "Ainmneacha céanna"
+msgstr "Ainmneacha cÃ©anna"
 
 #: ../fslint.glade:1493 ../fslint-gui:910
 msgid "Same names(ignore case)"
-msgstr "Ainmeacha(ná bac le cás)"
+msgstr "Ainmeacha(nÃ¡ bac le cÃ¡s)"
 
 #: ../fslint.glade:1631
 msgid "Name clashes"
-msgstr "Coimhlintí ainm"
+msgstr "CoimhlintÃ­ ainm"
 
 #: ../fslint.glade:1666
 msgid "More restrictive search for core files"
-msgstr "Cuardach níos díon le haghaidh comhadí cór"
+msgstr "Cuardach nÃ­os dÃ­on le haghaidh comhadÃ­ cÃ³r"
 
 #: ../fslint.glade:1668
 msgid "core file mode?"
-msgstr "mód comhad cór"
+msgstr "mÃ³d comhad cÃ³r"
 
 #: ../fslint.glade:1692
 msgid "days"
@@ -187,7 +187,7 @@ msgstr "laethanta"
 
 #: ../fslint.glade:1712
 msgid "minimum age"
-msgstr "íosaois"
+msgstr "Ã­osaois"
 
 #: ../fslint.glade:1862
 msgid "Temp files"
@@ -199,7 +199,7 @@ msgstr ""
 
 #: ../fslint.glade:1916
 msgid "Absolute links to paths within or below the link's directory"
-msgstr "Naisc iomlán go dtí conairí istigh nó faoi comhadlann an naisc"
+msgstr "Naisc iomlÃ¡n go dtÃ­ conairÃ­ istigh nÃ³ faoi comhadlann an naisc"
 
 #: ../fslint.glade:1918
 msgid "Suspect"
@@ -211,7 +211,7 @@ msgstr ""
 
 #: ../fslint.glade:1958
 msgid "Absolute"
-msgstr "Iomlán"
+msgstr "IomlÃ¡n"
 
 #: ../fslint.glade:1977
 msgid "/././. ///// /../ etc."
@@ -243,7 +243,7 @@ msgstr ""
 
 #: ../fslint.glade:2383 ../fslint-gui:555
 msgid "Empty directories"
-msgstr "Eolairí folamh"
+msgstr "EolairÃ­ folamh"
 
 #: ../fslint.glade:2413
 msgid "Search $PATH"
@@ -263,7 +263,7 @@ msgstr ""
 
 #: ../fslint.glade:2767
 msgid "Redundant whitespace"
-msgstr "Spásbán iomarach"
+msgstr "SpÃ¡sbÃ¡n iomarach"
 
 #: ../fslint.glade:2853
 msgid "Find"
@@ -285,7 +285,7 @@ msgstr "Liosta chun comhad"
 
 #: ../fslint.glade:3092
 msgid "Save"
-msgstr "Sabháil"
+msgstr "SabhÃ¡il"
 
 #: ../fslint.glade:3123 ../fslint.glade:3275
 msgid "selected"
@@ -300,7 +300,7 @@ msgstr "Scrios"
 msgid ""
 "All (except selected) using hardlinks\n"
 "(or symlinks if on a different filesystem)"
-msgstr "Gach (seachas roghnaithe) ag usáid naisc crúa"
+msgstr "Gach (seachas roghnaithe) ag usÃ¡id naisc crÃºa"
 
 #: ../fslint.glade:3245
 msgid "Merge"
@@ -308,7 +308,7 @@ msgstr "Cumaisc"
 
 #: ../fslint.glade:3320
 msgid "Clean"
-msgstr "Glán"
+msgstr "GlÃ¡n"
 
 #: ../fslint.glade:3452
 msgid "Select Path"
@@ -321,15 +321,15 @@ msgstr ""
 #: ../fslint-gui:167
 #, python-format
 msgid "Usage: %s [OPTION] [PATHS]"
-msgstr "Úsáid: %s [ROGHA] [CONAIRÍ]"
+msgstr "ÃšsÃ¡id: %s [ROGHA] [CONAIRÃ]"
 
 #: ../fslint-gui:168
 msgid "display version"
-msgstr "taispéain leagan"
+msgstr "taispÃ©ain leagan"
 
 #: ../fslint-gui:169
 msgid "display help"
-msgstr "taispéain cabhár"
+msgstr "taispÃ©ain cabhÃ¡r"
 
 #: ../fslint-gui:396
 #, python-format
@@ -338,11 +338,11 @@ msgstr ""
 
 #: ../fslint-gui:507
 msgid "Do you want to overwrite?\n"
-msgstr "An dteastaíonn uait muinscríobh?\n"
+msgstr "An dteastaÃ­onn uait muinscrÃ­obh?\n"
 
 #: ../fslint-gui:513
 msgid "You can't overwrite "
-msgstr "Ní feidir leat muinscríobh "
+msgstr "NÃ­ feidir leat muinscrÃ­obh "
 
 #: ../fslint-gui:548
 msgid "Files with the same content"
@@ -359,7 +359,7 @@ msgstr ""
 #: ../fslint-gui:551
 #, fuzzy
 msgid "Possibly conflicting commands or filenames"
-msgstr "Comhadí coimhlint"
+msgstr "ComhadÃ­ coimhlint"
 
 #: ../fslint-gui:552
 msgid "Possibly old temporary files"
@@ -395,7 +395,7 @@ msgstr ""
 
 #: ../fslint-gui:642
 msgid "No search paths specified"
-msgstr "Níl aon conairí cuardach sonraíaithe"
+msgstr "NÃ­l aon conairÃ­ cuardach sonraÃ­aithe"
 
 #: ../fslint-gui:776
 msgid ""
@@ -426,7 +426,7 @@ msgstr ""
 
 #: ../fslint-gui:842
 msgid " empty directories"
-msgstr " eolairí folamh"
+msgstr " eolairÃ­ folamh"
 
 #: ../fslint-gui:874
 msgid " links"
@@ -434,7 +434,7 @@ msgstr " naisc"
 
 #: ../fslint-gui:890 ../fslint-gui:1006
 msgid " bytes wasted in "
-msgstr " beartí chuir amú i "
+msgstr " beartÃ­ chuir amÃº i "
 
 #: ../fslint-gui:936 ../fslint-gui:1007
 msgid " files (in "
@@ -442,11 +442,11 @@ msgstr " comhaid (i "
 
 #: ../fslint-gui:937 ../fslint-gui:1008
 msgid " groups)"
-msgstr " grúpaí)"
+msgstr " grÃºpaÃ­)"
 
 #: ../fslint-gui:998
 msgid "bytes wasted"
-msgstr "beartí chuir amú"
+msgstr "beartÃ­ chuir amÃº"
 
 #: ../fslint-gui:1081
 msgid "None selected"
@@ -454,12 +454,12 @@ msgstr "Faic roghnaithe"
 
 #: ../fslint-gui:1085
 msgid " this item?\n"
-msgstr " an mír seo?\n"
+msgstr " an mÃ­r seo?\n"
 
 #: ../fslint-gui:1087
 #, python-format
 msgid " these %d items?\n"
-msgstr " na %d míreanna seo?\n"
+msgstr " na %d mÃ­reanna seo?\n"
 
 #: ../fslint-gui:1219
 msgid "User aborted"
@@ -489,7 +489,7 @@ msgstr ""
 
 #: ../fslint-gui:1556
 msgid "Are you sure you want to delete"
-msgstr "An bhfuil tú cinnte go teastaíonn uait a scrios"
+msgstr "An bhfuil tÃº cinnte go teastaÃ­onn uait a scrios"
 
 #: ../fslint-gui:1573
 msgid "Calculating dependencies..."
@@ -510,11 +510,11 @@ msgstr ""
 
 #: ../fslint-gui:1632
 msgid " items deleted"
-msgstr " míreanna scriosta"
+msgstr " mÃ­reanna scriosta"
 
 #: ../fslint-gui:1645
 msgid "Are you sure you want to merge ALL files?\n"
-msgstr "An bhfuil tú cinnte go teastaíonn uait na comhaid GO LÉIR a cumaisc?\n"
+msgstr "An bhfuil tÃº cinnte go teastaÃ­onn uait na comhaid GO LÃ‰IR a cumaisc?\n"
 
 #: ../fslint-gui:1649
 msgid "(Ignoring those selected)\n"
@@ -534,12 +534,12 @@ msgstr ""
 
 #: ../fslint-gui:1709
 msgid "Are you sure you want to clean"
-msgstr "An bhfuil tú cinnte go teastaíonn uait a glánnadh"
+msgstr "An bhfuil tÃº cinnte go teastaÃ­onn uait a glÃ¡nnadh"
 
 #: ../fslint-gui:1753
 msgid " items cleaned ("
-msgstr " míreanna glán ("
+msgstr " mÃ­reanna glÃ¡n ("
 
 #: ../fslint-gui:1754
 msgid " bytes saved)"
-msgstr " beartí sábháilte)"
+msgstr " beartÃ­ sÃ¡bhÃ¡ilte)"
