--- a/po/ms.po
+++ b/po/ms.po
@@ -8,12 +8,14 @@ msgstr ""
 "Project-Id-Version: fslint 2.26\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-01 16:07+0000\n"
-"PO-Revision-Date: 2008-02-01 16:07+0800\n"
+"PO-Revision-Date: 2008-05-21 22:20+0000\n"
 "Last-Translator: Sharuzzaman Ahmat Raslan <sharuzzaman@myrealbox.com>\n"
 "Language-Team: Malay <translation-team-ms@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Launchpad-Export-Date: 2008-07-11 11:00+0000\n"
+"X-Generator: Launchpad (build Unknown)\n"
 
 #: ../fslint.glade:8
 msgid "FSlint"
@@ -339,7 +341,7 @@ msgstr "Adakah anda mahu tindih?\n"
 
 #: ../fslint-gui:513
 msgid "You can't overwrite "
-msgstr "Anda tidak menindih"
+msgstr "Anda tidak menindih "
 
 #: ../fslint-gui:548
 msgid "Files with the same content"
