Support from Marcus Habermehl for pacman in the "Installed Packages" function in the GUI. This package manager is used by Arch linux and the frugalware derivative.
I also did a little refactoring in the
distro detection class.


git-svn-id: https://fslint.googlecode.com/svn/trunk@167 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -10,6 +10,8 @@
 		* Tweak some ancillary scripts to run on dash (ubuntu).
 	* Improvements:
 		* Improve layout of "redundant whitespace" tab options.
+		* Support from Marcus Habermehl for Arch linux (pacman)
+		  in the "Installed Packages" function.
 
 2.26 20/05/08
 	* Translations:
