The rpm was not building on mandrake as fslint.desktop had the file extension specified for the icon. So I've fixed this and also updated the icon to something more modern. Note I tried to install the icon to /usr/share/icons/hicolor/48x48/apps/ as per the freedesktop spec, but that couldn't be found on my fedora 8 system, so I left it in the traditional /usr/share/pixmaps/
git-svn-id: https://fslint.googlecode.com/svn/trunk@168 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -8,6 +8,7 @@
 		  wastage of a group of duplicate files is > 2GB.
 		* Fix "fix whitespace" script to remove trailing tabs.
 		* Tweak some ancillary scripts to run on dash (ubuntu).
+		* Update icon and fix menu file which was broken on mandrake.
 	* Improvements:
 		* Improve layout of "redundant whitespace" tab options.
 		* Support from Marcus Habermehl for Arch linux (pacman)
