Add support for opening files in the default desktop application. This is done with os.system("xdg-open") and triggered with Enter, Ctrl-O or double-click on a file.
git-svn-id: https://fslint.googlecode.com/svn/trunk@171 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -10,6 +10,8 @@
 		* Tweak some ancillary scripts to run on dash (ubuntu).
 		* Fix the desktop menu file which broke the build on Mandriva.
 	* Improvements:
+		* Add support in the GUI for opening files in the
+		  registered default desktop application.
 		* Update icon.
 		* Improve layout of options in "redundant whitespace" tab.
 		* Support from Marcus Habermehl for Arch linux (pacman)
