Patch from David Geller to have "dry run" output from findup -[dm] -t be split into multiple lines per diff group with a blank link in between.
git-svn-id: https://fslint.googlecode.com/svn/trunk@172 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -16,6 +16,8 @@
 		* Improve layout of options in "redundant whitespace" tab.
 		* Support from Marcus Habermehl for Arch linux (pacman)
 		  in the "Installed Packages" function.
+		* Patch from David Geller to improve readability of
+		  output from findup in "dry run" mode.
 
 2.26 20/05/08
 	* Translations:
