--- a/debian/changelog
+++ b/debian/changelog
@@ -1,14 +1,8 @@
-fslint (2.29-1) unstable; urgency=low
-
-  * Bump to delvel version
-
- -- pádraig brady <p@draigbrady.com>  tue, 09 sep 2008 10:39:00 +0000
-
 fslint (2.28-1) unstable; urgency=low
 
-  * bump to release version
+  * Bump to release version
 
- -- pádraig brady <p@draigbrady.com>  tue, 09 sep 2008 08:09:00 +0000
+ -- Pádraig Brady <P@draigBrady.com>  Tue, 09 Sep 2008 08:09:00 +0000
 
 fslint (2.27-1) unstable; urgency=low
 
