Patch from Marcus Habermehl to support Arch linux as well as Frugalware. The issue is that pacman uses KiB units on Arch linux as in the table below:
            frugal   arch
          \ ---------------
pacman     | 1234    1.23 K
pacman-g2  | 1234    na

This fixes issues 16



git-svn-id: https://fslint.googlecode.com/svn/trunk@189 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,4 +1,7 @@
 2.29 dd/mm/yy
+	* Fixes:
+		* Patch from Marcus Habermehl to support Arch linux
+		  as well as Frugalware in the "Installed Packages" function.
 
 2.28 09/09/08
 	* Translations:
@@ -394,8 +397,8 @@
 	  all tools had to have the global parameters (-r & -f at present)
 	  specified before any others, and there were various issues when
 	  no parameters were passed. This should all be fixed now.
-	* Removed the bash dependency (declare) from getfpf. Marc A.
-	  Lehmann reported this.
+	* Removed the bash dependency (declare) from getfpf.
+	  Marc A. Lehmann reported this.
 	* Got rid of spurious 0 output by findrs when it had no files to report.
 	* The usual extra comments and code cleanups.
 
