--- a/doc/NEWS
+++ b/doc/NEWS
@@ -2,6 +2,7 @@
 	* Fixes:
 		* Patch from Marcus Habermehl to support Arch linux
 		  as well as Frugalware in the "Installed Packages" function.
+		* Handle single quotes in specified paths.
 
 2.28 09/09/08
 	* Translations:
