--- a/doc/NEWS
+++ b/doc/NEWS
@@ -3,6 +3,8 @@
 		* Patch from Marcus Habermehl to support Arch linux
 		  as well as Frugalware in the "Installed Packages" function.
 		* Handle single quotes in specified paths.
+	* Improvements:
+		* Add a context menu item to "Open Folder" of selected file.
 
 2.28 09/09/08
 	* Translations:
