Rename fixdup.py to fixdup to get around problematic bytecode compilation done on fedora at least. This script is not a module so py[co] files are redundant. Also they made the rpm dependent on the python release (bytecode version). Using the %exclude directive to ignore them was problematic because it's only available in newer rpm versions, and also on systems that don't do the bytecode compilation (like mandriva) an error was thrown when building the rpm.
git-svn-id: https://fslint.googlecode.com/svn/trunk@201 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -3,6 +3,7 @@
 		* Patch from Marcus Habermehl to support Arch linux
 		  as well as Frugalware in the "Installed Packages" function.
 		* Handle single quotes in specified paths.
+		* Support building Mandriva RPMs again from the tarball.
 	* Improvements:
 		* Add a context menu item to "Open Folder" of selected file.
 
