--- a/doc/NEWS
+++ b/doc/NEWS
@@ -6,6 +6,8 @@
 		* Support building Mandriva RPMs again from the tarball.
 	* Improvements:
 		* Add a context menu item to "Open Folder" of selected file.
+		* Ask for confirmation, if all copies of a duplicate
+		  are selected for deletion.
 
 2.28 09/09/08
 	* Translations:
