Change from using the GtkFileSelection dialog to GtkFileChooser. The former was giving deprecation warnings, though gvim seems to use it without deprecation warnings? GtkFileChooser has been available since Gtk+ 2.4 which was released 5 years ago (March 2004), so the Gtk+ requirement has been raised from 2.0 to 2.4. This dialog has been getting a bit of love lately, so I think it's OK to start using it now: http://en.opensuse.org/GNOME/GtkFileChooser_bug_week
git-svn-id: https://fslint.googlecode.com/svn/trunk@204 494acc53-a219-0410-adff-8f8ff343f446

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -8,6 +8,7 @@
 		* Add a context menu item to "Open Folder" of selected file.
 		* Ask for confirmation, if all copies of a duplicate
 		  are selected for deletion.
+		* Use GtkFileChooser rather than deprecated GtkFileSelection.
 
 2.28 09/09/08
 	* Translations:
